# mAI-coach

./: .gitignore  README.md  package-lock.json
.claude/: settings.local.json
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8509008ad75b_initial_schema_runs_cycle_entries_.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  cycle.py  run.py
frontend/: README.md  index.html  package-lock.json
frontend/src/app/: App.tsx
frontend/src/app/components/: AIChat.tsx  AIInsightsFeed.tsx  ChatPage.tsx  CycleInsights.tsx  DailyReadiness.tsx  DashboardPage.tsx  LogPage.tsx  Navigation.tsx  NutritionRecommendations.tsx  ProfilePage.tsx  RecoverySleep.tsx  RunningAnalytics.tsx  WeeklySnapshot.tsx  WeightliftingAnalytics.tsx
frontend/src/styles/: fonts.css  theme.css
