[project]
name = "mai-coach-backend"
version = "0.1.0"
description = "Backend for mAI-coach: an AI-powered women's health & fitness dashboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web framework — handles HTTP routing, validation, and OpenAPI docs.
    "fastapi>=0.115.0",
    # ASGI server — what actually runs FastAPI on a port.
    "uvicorn[standard]>=0.32.0",
    # Settings management — typed environment variables loaded from .env.
    "pydantic-settings>=2.5.0",
    # ORM — defines tables as Python classes, translates to SQL.
    "sqlmodel>=0.0.22",
    # Migrations — versioned schema changes for the database.
    "alembic>=1.14.0",
]

[dependency-groups]
# Dev-only deps — not installed when deploying.
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",  # required by FastAPI's TestClient
]
